update click to play

--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
 	<!-- Script Lib -->
 	<script type="text/javascript" src="./lib/jquery.js"></script>
 	<script type="text/javascript" src="./lib/garden.js"></script>
-	
+	<script src="./script.js"></script>
 	<!-- Font -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 	<!-- MUSIC -->
-	<!-- <audio autoplay="autopaly">
+	<!-- <audio autoplay="autoplay"> 
 		<source src="music/let-her-go.mp3" type="audio/mp3">
-	</audio>   -->
-	<audio autoplay loop  id="playAudio">
-    	<source src="music/let-her-go.mp3">
+	</audio> -->
+	<audio autoplay id="autoplay"> 
+		<source src="music/let-her-go.mp3" type="audio/mpeg">
 	</audio>
-	
+	<!-- <audio allow=”autoplay” autoplay="true" loop id="playAudio" type="audio/mp3">
+    	<source src="./music/let-her-go.mp3">
+	</audio> -->
 	<div id="mainDiv">
 	
 		<!--- TEXT [EDIT ONLY] -->
