--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<source src="music/let-her-go.mp3" type="audio/mp3">
 	</audio> -->
 	<audio autoplay id="autoplay"> 
-		<source gitsrc="music/let-her-go.mp3" type="audio/mpeg">
+		<source src="music/let-her-go.mp3" type="audio/mpeg">
 	</audio>
 	<!-- <audio allow=”autoplay” autoplay="true" loop id="playAudio" type="audio/mp3">
     	<source src="./music/let-her-go.mp3">
